add receiver