@@ -3,13 +3,20 @@ package commands;
 import common.AppClient;
 import models.City;
 
+import java.util.List;
+
 public class RemoveHeadCommand implements Command{
+    private List<City> collection;
+    public RemoveHeadCommand(List<City> collection){
+
+        this.collection = collection;
+    }
     @Override
     public void execute() {
-        if (!AppClient.cities.isEmpty()){
-            City city = AppClient.cities.getFirst();
+        if (!collection.isEmpty()){
+            City city = collection.get(0);
             System.out.println(city.toString());
-            AppClient.cities.removeFirst();
+            collection.remove(0);
             System.out.println("First element of collection removed");
         }
         else {
